--- a/src/Client/public/index.html
+++ b/src/Client/public/index.html
@@ -1,19 +1,17 @@
-﻿<!doctype html>
+﻿<!DOCTYPE html>
 <html>
+    <head>
+        <title>Senses</title>
+        <meta charset="utf-8" />
 
-<head>
-    <title>Senses</title>
-    <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="/styles/main.css" />
+        <link rel="stylesheet" href="/styles/normalize.css" />
+        <link rel="shortcut icon" href="/images/favicon.ico" />
+    </head>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/styles/main.css" />
-    <link rel="stylesheet" href="/styles/normalize.css" />
-    <link rel="shortcut icon" href="/images/favicon.ico" />
-</head>
-
-<body>
-    <div id="elmish-app"></div>
-    <script src="./js/bundle.js"></script>
-</body>
-
+    <body>
+        <div id="senses-app"></div>
+        <script src="/js/bundle.js"></script>
+    </body>
 </html>
